--- a/playbooks/dep_svc.yml
+++ b/playbooks/dep_svc.yml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: my-app
-        image: mahesh8887/image-name:latest        
+        image: jatharanil/image-name:latest        
         ports:
         - containerPort: 8080        
         readinessProbe:
